--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -13,6 +13,9 @@ section {
     width: 90%;
     margin: 0 auto;
 }
+.white {
+    color: #fff;
+}
 .whiteLink {
     color: #fff;
     font-size: 14px;
@@ -52,6 +55,10 @@ section {
     border: 1px solid #fff;
     border-radius: 20px;
     background-color: #fff;
+}
+.footerLink {
+    color: #6FB3E3;
+    font-family: sans-serif;
 }
 .button {
     padding: 10px;
