--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -127,7 +127,8 @@
 .location {
     width: 100%;
     position: relative;
-
+    border-bottom: 1px dashed black;
+    margin-bottom: 100px;
     .items {
         display: flex;
         align-items: center;
@@ -143,11 +144,13 @@
                 color: #00369D;
                 margin-bottom: 1.5rem;
             }
+
             p {
                 margin-bottom: 1.5rem;
                 font-family: sans-serif;
                 width: 69%;
             }
+
             .buttons {
                 .border {
                     border-color: #00369D;
@@ -158,11 +161,238 @@
 
         .img {
             width: 50%;
-            position: relative;
-            left: 100px;
+            display: flex;
+            align-items: center;
+
             img {
                 width: 542px;
                 height: 542px;
+            }
+        }
+    }
+}
+.opportunities {
+    width: 100%;
+    margin: 40px auto;
+    .items {
+        display: flex;
+        justify-content: space-between;
+        padding: 10px;
+        img {
+            width: 308px;
+            height: 308px;
+            display: flex;
+            border-radius: 45px;
+        }
+        .leftCards {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+        .middleCards {
+            text-align: center;
+            border: 1px solid #00369D;
+            border-radius: 45px;
+            background-color: #00369D;
+            width: 48%;
+            .item {
+                position: relative;
+                left: 15px;
+                padding: 0 20px;
+                img {
+                    position: relative;
+                    top: -90px;
+                    left: 34%;
+                    width: 192px;
+                    height: 192px;
+                }
+                h1 {
+                    color: #fff;
+                    font-size: 2.5rem;
+                    margin-bottom: 20px;
+                }
+                p {
+                    color: #fff;
+                    text-align: center;
+                    font-size: 1rem;
+                    width: 550px;
+                    font-family: sans-serif;
+                    line-height: 30px;
+                    margin-bottom: 10px;
+                }
+                .buttons {
+                    position: relative;
+                    .button {
+                        background-color: #6fb3e3;
+                        color: #00369D;
+                        &:hover {
+                            background-color: transparent;
+                            color: #fff;
+                        }
+                        &:hover + .border{
+                            left: 210px;
+                        }
+                    }
+                    .border {
+                        position: absolute;
+                        left: 200px;
+                        width: 150px;
+
+                    }
+                }
+
+            }
+        }
+        .rightCards {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+    }
+}
+.desserts {
+    width: 100%;
+    h1 {
+        width: 100%;
+        font-size: 2rem;
+        color: #00369D;
+        text-align: center;
+        margin-bottom: 60px;
+    }
+    .items {
+        width: 100%;
+        display: flex;
+        align-items: center;
+    }
+    .left {
+        width: 50%;
+        text-align: center;
+        .img {
+            transform: rotate(-4deg);
+            position: relative;
+            transition: 0.3s ease-in-out;
+            margin-bottom: 30px;
+            img {
+                width: 554px;
+                height: 436px;
+                object-fit: cover;
+                border-radius: 15px;
+                position: relative;
+                z-index: 1;
+                cursor: pointer;
+                transition: 0.3s ease-in-out;
+            }
+            &:hover  {
+                transform: rotate(0deg);
+            }
+            &:hover  .hoverImg{
+                transform: scale(1.07);
+            }
+            .imgBorder {
+                border: 1px dashed #00369D;
+                position: absolute;
+                width: 554px;
+                height: 436px;
+                left: 30px;
+                bottom: -5px;
+                border-radius: 15px;
+                z-index: 0;
+            }
+        }
+        h2 {
+            color: #00369D;
+            margin-bottom: 10px;
+        }
+        p {
+            font-family: sans-serif;
+            margin-bottom: 20px;
+
+        }
+        .buttons {
+            position: relative;
+            .button {
+                padding: 10px 20px;
+                &:hover {
+                    background-color: transparent;
+                    color: #00369D;
+                }
+                &:hover + .border{
+                    left: 260px;
+                    bottom: 2px;
+                }
+            }
+            .border {
+                position: absolute;
+                left: 250px;
+                width: 130px;
+                bottom: -5px;
+                border-color: #00369D;
+            }
+        }
+    }
+    .right {
+        width: 50%;
+        text-align: center;
+        .img {
+            transform: rotate(4deg);
+            position: relative;
+            transition: 0.3s ease-in-out;
+            margin-bottom: 30px;
+            img {
+                width: 554px;
+                height: 436px;
+                object-fit: cover;
+                border-radius: 15px;
+                position: relative;
+                z-index: 1;
+                cursor: pointer;
+                transition: 0.3s ease-in-out;
+            }
+            &:hover  {
+                transform: rotate(0deg);
+            }
+            &:hover  .hoverImg{
+                transform: scale(1.07);
+            }
+            .imgBorder {
+                border: 1px dashed #00369D;
+                position: absolute;
+                width: 554px;
+                height: 436px;
+                left: 30px;
+                bottom: -5px;
+                border-radius: 15px;
+                z-index: 0;
+            }
+        }
+        h2 {
+            color: #00369D;
+            margin-bottom: 10px;
+        }
+        p {
+            font-family: sans-serif;
+            margin-bottom: 20px;
+
+        }
+        .buttons {
+            position: relative;
+            .button {
+                padding: 10px 20px;
+                &:hover {
+                    background-color: transparent;
+                    color: #00369D;
+                }
+                &:hover + .border{
+                    left: 260px;
+                    bottom: 2px;
+                }
+            }
+            .border {
+                position: absolute;
+                left: 250px;
+                width: 130px;
+                bottom: -5px;
+                border-color: #00369D;
             }
         }
     }
