--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -5,4 +5,9 @@
 @import "./pages/home";
 @import "./pages/location";
 @import "./pages/shop";
-@import "./pages/notFound"
+@import "./pages/notFound";
+@import "./pages/account";
+@import "./pages/cart";
+@import "./pages/contact";
+@import "./pages/resetPassword";
+@import "./pages/create";
