--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -43,6 +43,9 @@ section {
 } 
 .classBlue {
     color: #00369D;
+    &:hover {
+        color: white;
+    }
 }
 .blueLink:hover  {
     border: 1px solid transparent;
