--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -6,53 +6,70 @@
     font-family: "Pacifico", cursive;
     text-decoration: none;
 }
+
 section {
     padding: 69px 0;
 }
+
 .container {
     width: 90%;
     margin: 0 auto;
 }
+
 .white {
     color: #fff;
+
     &:hover {
         color: #00369D;
     }
 }
+
 .blue {
     color: #00369D;
+
+    &:hover {
+        color: #fff;
+    }
+}
+
+.passBlue {
+    color: #00369D;
+
     &:hover {
         color: #4496f6;
     }
 }
+
 .whiteLink {
     color: #fff;
     font-size: 14px;
     transition: 0.3s ease-in-out;
 }
+
 .whiteLink:hover {
     border: 1px solid transparent;
     border-radius: 20px;
-    background-color: rgba(255,255,255,.1);
+    background-color: rgba(255, 255, 255, .1);
     padding: 5px;
 }
+
 .blueLink {
     color: #00369D;
     font-size: 14px;
     transition: 0.3s ease-in-out;
-} 
+}
+
 .classBlue {
     color: #00369D;
-    &:hover {
-        color: white;
-    }
 }
-.blueLink:hover  {
+
+.blueLink:hover {
     border: 1px solid transparent;
     border-radius: 20px;
     background-color: rgba(100, 100, 100, 0.2);
     padding: 5px;
 }
+
 .contactLink {
     transition: 0.3s ease-in-out;
     font-size: 14px;
@@ -61,6 +78,7 @@ section {
     border-radius: 20px;
     padding: 6px;
 }
+
 .contactLink:hover {
     color: #00369D;
     padding: 6px;
@@ -68,10 +86,12 @@ section {
     border-radius: 20px;
     background-color: #fff;
 }
+
 .footerLink {
     color: #6FB3E3;
     font-family: sans-serif;
 }
+
 .button {
     padding: 10px;
     color: #fff;
@@ -84,6 +104,7 @@ section {
     cursor: pointer;
     transition: 0.1s ease-in-out;
 }
+
 .border {
     display: inline-block;
     padding: 8px 62px;
@@ -96,42 +117,47 @@ section {
     bottom: -6px;
     transition: 0.3s ease-in-out;
 }
+
 .button:hover {
     background-color: transparent;
     color: #00369D;
 }
-.button:hover + .border {
+
+.button:hover+.border {
     left: 0;
     bottom: 0;
 }
+
 .swiper-button-next,
 .swiper-button-prev {
-  color: #fff; 
-  font-size: 20px; 
-  background: #00369D; 
-  border-radius: 50%; 
-  width: 60px;
-  height: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    color: #fff;
+    font-size: 20px;
+    background: #00369D;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
 .swiper-button-next:hover,
 .swiper-button-prev:hover {
-  background: black; 
-  color: #fff; 
-  transform: scale(1.1); 
-  transition: all 0.3s ease;
+    background: black;
+    color: #fff;
+    transform: scale(1.1);
+    transition: all 0.3s ease;
 }
 
 
 .swiper-button-next {
-  right: 10px; 
+    right: 10px;
 }
 
 .swiper-button-prev {
-  left: 10px; 
+    left: 10px;
 }
+
 .swiper-pagination {
     text-align: center;
-  }
+}
