--- a/src/assets/scss/Components/_shopProducts.scss
+++ b/src/assets/scss/Components/_shopProducts.scss
@@ -19,6 +19,7 @@
             height: auto;
             transition: 0.3s ease-in-out;
             margin-bottom: 10px;
+            cursor: pointer;
         }
         p {
             color: rgb(101, 92, 92);
