--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -13,4 +13,5 @@
 @import "./pages/contact";
 @import "./pages/resetPassword";
 @import "./pages/create";
-@import "./pages/editCart"
+@import "./pages/editCart";
+@import "./pages/cardInfo";
