--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -12,6 +12,6 @@
 @import "./Components/shopProducts";
 @import "./pages/contact";
 @import "./pages/resetPassword";
-@import "./pages/create";
+@import "./pages/register";
 @import "./pages/editCart";
 @import "./pages/cardInfo";
