--- a/src/assets/scss/Components/_shopProducts.scss
+++ b/src/assets/scss/Components/_shopProducts.scss
@@ -1,36 +1,52 @@
-.card {
-    width: 24%;
-    margin-bottom: 30px;
-    &:hover {
-        .items img {
-            transform: scale(1.05);
-        }
-        .items p {
-            color: #00369d;
-        }
-    }
-    .items {
+.shop-products {
+    display: flex;
+
+    .product-list {
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        transition: 0.3s ease-in-out;
-        img {
-            width: 100%;
-            height: auto;
-            transition: 0.3s ease-in-out;
-            margin-bottom: 10px;
-            cursor: pointer;
-        }
-        p {
-            color: rgb(101, 92, 92);
-            text-transform: uppercase;
-            transition: 0.2s ease-in-out;
-            margin-bottom: 10px;
-        }
-        button {
+        flex-wrap: wrap;
+
+        .card {
+            width: 24%;
+            margin-bottom: 30px;
+
             &:hover {
-                border: 1px dashed #00369d;
+                .items img {
+                    transform: scale(1.05);
+                }
+
+                .items p {
+                    color: #00369d;
+                }
+            }
+
+            .items {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                transition: 0.3s ease-in-out;
+
+                img {
+                    width: 100%;
+                    height: 200px;
+                    transition: 0.3s ease-in-out;
+                    margin-bottom: 10px;
+                    cursor: pointer;
+                }
+
+                p {
+                    color: rgb(101, 92, 92);
+                    text-transform: uppercase;
+                    transition: 0.2s ease-in-out;
+                    margin-bottom: 10px;
+                }
+
+                button {
+                    &:hover {
+                        border: 1px dashed #00369d;
+                    }
+                }
             }
         }
+
     }
 }
