--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -211,4 +211,23 @@
   .accountHover:hover .accountDropdown {
     display: block;
   }
+  .quantityBadge {
+    display: inline-block;
+    background-color: yellow; 
+    color: black; 
+    font-size: 12px; 
+    font-weight: bold;
+    padding: 5px; 
+    border-radius: 50%; 
+    position: absolute; 
+    top: -5px; 
+    right: 0px; 
+    width: 20px; 
+    height: 20px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); 
+  }
+  
   
