--- a/src/assets/scss/Components/_shopProducts.scss
+++ b/src/assets/scss/Components/_shopProducts.scss
@@ -8,6 +8,7 @@
         .card {
             width: 24%;
             margin-bottom: 30px;
+            text-align: center;
 
             &:hover {
                 .items img {
