--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     list-style-type: none;
-    font-family: "Pacifico", cursive;
+    font-family: "Pacifico";
     text-decoration: none;
   }
   
